--- a/src/dataset_test.ipynb
+++ b/src/dataset_test.ipynb
@@ -9,9 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'venv_dataset (Python 3.11.8)' requires the ipykernel package.\n",
+      "\u001b[1;31mInstall 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/Users/lisadavinchie/Documents/University/Thesis/dataset_preprocessing/venv_dataset/bin/python -m pip install ipykernel -U --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "import torch as th\n",
     "import numpy as np\n",
@@ -217,7 +228,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_inpainting",
+   "display_name": "venv_dataset",
    "language": "python",
    "name": "python3"
   },
